fix long links on mobile

--- a/resources/css/_typography.css
+++ b/resources/css/_typography.css
@@ -135,9 +135,14 @@
         a {
             color: theme('colors.red.600');
             text-decoration: underline;
+            word-break: break-word;
 
             &:hover {
                 color: darken(theme('colors.red.600'), 10%);
+            }
+            
+            @screen lg {
+                word-break: normal;
             }
         }
     }
